[tool.poetry]
name = "pycspr"
version = "0.13.1"
description = "Python library for interacting with a CSPR node."
authors = ["Mark A. Greenslade <asladeofgreen@gmail.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
jsonrpcclient = "^4.0.3"
cryptography = "^42.0.2"
ecdsa = "^0.18.0"
blake3 = "^0.4.1"
sseclient-py = "^1.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
